crates/java-syntax/tests/snapshots/event_snapshots__event_enum_with_members.snap
---
source: crates/java-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
enum E { A, B; int x; void f() {} }
TOKENS:
ENUM_KW "enum"
WHITESPACE " "
IDENTIFIER "E"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
COMMA ","
WHITESPACE " "
IDENTIFIER "B"
SEMICOLON ";"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
SEMICOLON ";"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(ENUM_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(ENUM_BODY, forward_parent=None)
AddToken
StartNode(ENUM_CONSTANT, forward_parent=None)
AddToken
FinishNode
AddToken
StartNode(ENUM_CONSTANT, forward_parent=None)
AddToken
FinishNode
AddToken
StartNode(FIELD_DECL, forward_parent=None)
Tombstone
StartNode(TYPE, forward_parent=None)
AddToken
FinishNode
StartNode(VARIABLE_DECLARATOR_LIST, forward_parent=None)
StartNode(VARIABLE_DECLARATOR, forward_parent=None)
AddToken
FinishNode
FinishNode
AddToken
FinishNode
StartNode(METHOD_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(FORMAL_PARAMETERS, forward_parent=None)
AddToken
AddToken
FinishNode
StartNode(BLOCK, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
<none>
