crates/java-syntax/tests/snapshots/event_snapshots__event_nested_wildcard_type_argument.snap
---
source: crates/java-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
class A { Map<String, List<? extends Number>> xs; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "Map"
LESS "<"
IDENTIFIER "String"
COMMA ","
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
QUESTION "?"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "Number"
RIGHT_SHIFT ">>"
WHITESPACE " "
IDENTIFIER "xs"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(FIELD_DECL, forward_parent=None)
Tombstone
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
StartNode(TYPE_ARGUMENTS, forward_parent=None)
AddToken
StartNode(TYPE_ARGUMENT, forward_parent=None)
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
FinishNode
FinishNode
AddToken
StartNode(TYPE_ARGUMENT, forward_parent=None)
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
StartNode(TYPE_ARGUMENTS, forward_parent=None)
AddToken
StartNode(TYPE_ARGUMENT, forward_parent=None)
StartNode(WILDCARD_TYPE, forward_parent=None)
AddToken
StartNode(WILDCARD_BOUNDS, forward_parent=None)
AddToken
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
FinishNode
FinishNode
FinishNode
FinishNode
AddVirtualToken(RIGHT_SHIFT, ">")
FinishNode
FinishNode
FinishNode
AddVirtualToken(GREATER, ">")
AdvanceSource
FinishNode
FinishNode
StartNode(VARIABLE_DECLARATOR_LIST, forward_parent=None)
StartNode(VARIABLE_DECLARATOR, forward_parent=None)
AddToken
FinishNode
FinishNode
AddToken
FinishNode
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
<none>
